# computer-use

./: .gitignore  README.md  ab_demo.py  demo_replay.py  eval_disagreement.py  live_probe.py  pyproject.toml  requirements-win.txt  run_capture.py  win_verify.py
captures/: in-the-power-automate-desktop-settings-d-20260628T213105Z.json  open-the-edit-menu-and-insert-the-time-a-20260628T215501Z.json  use-find-and-replace-to-replace-every-re-20260628T220554Z.json
design/: 00_consolidated_spec.md  00b_vision_v2_two_sensors.md  README.md
findings/: 2026-06-28-ab-real-numbers.md  2026-06-28-disagreement-flat.md  2026-06-28-measure-first-non-convergence.md  2026-06-29-consequence-probes.md  v1-structure-snapping.md
src/cua/: __init__.py  ab.py  capture.py  disagreement.py  estimator.py  executor.py  live.py  perception.py  policy.py  runner.py  trace.py  types.py  win_executor.py
src/cua/fixtures/: __init__.py  form_fill.py  settings_dialog.py
tests/: test_ab.py  test_capture.py  test_disagreement.py  test_live.py  test_policy.py  test_runner.py
